compiler/src/test/resources/golden/errors/set_unshowable.dawn
type Opaque = Mk(f: fn(Int) -> Int)

pub fn main() -> Unit !io = {
  let s = set_insert(set_empty(), Mk(fn(x) => x))
  println(to_string(s))
}
